fixed map overflow causing horizontal scroll, messing up header on mobile. Made changes to footer

--- a/Style.css
+++ b/Style.css
@@ -282,12 +282,17 @@ footer a {
 .campus-locations strong {
     font-size:25px;
     color: #414C57;
+    
 }
 
-.campus-locations div {
-    padding:20px;
+.campus-locations iframe{
+    width:100%;
+    height:auto;
+    min-height:200px;
+    padding-bottom: 50px;
 
 }
+
 
 .campus-locations a {
     text-decoration: none;
